--- a/src/index.scss
+++ b/src/index.scss
@@ -3,8 +3,11 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
+  list-style: none;
 }
 
 body{
   background-color: #f3f5f9;
+  max-width: 1500px;
+  margin: 0 auto;
 }
