--- a/src/components/Header/HeaderBottom/styles.scss
+++ b/src/components/Header/HeaderBottom/styles.scss
@@ -39,7 +39,7 @@
     a{
       text-decoration: none;
       width: 100%;
-      padding: 10px 0;
+      padding: 10px;
       border-radius: 20px;
       text-align: center;
       font-size: 22px;
@@ -65,7 +65,6 @@
       align-items: center;
       justify-content: center;
       gap: 1em;
-
       svg{
         fill: #3167d9;
         font-size: 20px;
