:lipstick: ajustes na ui no header e na seção de services

--- a/src/components/sectionServices/styles.scss
+++ b/src/components/sectionServices/styles.scss
@@ -47,10 +47,9 @@
 
         
         @media (max-width:420px){
-          h3,p{
+          p{
             text-align: center;
           }
-  
         }
 
         a{
