--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
   list-style: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body{
