--- a/src/components/FAQs/styles.scss
+++ b/src/components/FAQs/styles.scss
@@ -2,26 +2,52 @@
   display: flex;
   flex-direction: column;
   gap: 1em;
-
-  div{
-    background-color: #4a3e48;
+  
+  &>div{
+    background-color: #454655;
     color: #eaeaea;
-    padding: 10px 20px;
-    max-width: 450px;
-    border-radius: 20px;
+    padding: 10px;
+    max-width: 460px;
+    border-radius: 15px;
+    position: relative;
+    cursor: pointer;
+    .title-card{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
 
-    h3{
-      text-align: left;
+      h3{
+        text-align: left;
+        width: 100%;
+        @media (max-width:480px){
+          text-align: center;
+        }
+        
+      }
+
+      span{
+            font-size: 35px;
+            transition: all 300ms ease-in-out;
+        }
+  
+        .active{
+          position: relative;
+          top: -10px;
+          right: 0;
+          transform: rotate(180deg);
+        }
     }
 
     ul{
-      margin-top: 1em;
-      padding-left: 10px;
-
+      padding-left: 20px;
+      margin-top: .5em;
       li{
         list-style: disc;
-  
-        
+        margin-bottom: .5em;
+        p{
+          font-size: 1.1em;
+          line-height: 1.5em;
+        }
       }
     }
   }
