--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@
   font-family: "Poppins", sans-serif;
   list-style: none;
   -webkit-tap-highlight-color: transparent;
+  scroll-behavior: smooth;
 }
 
 body{
